# EP008

./: .gitignore  HealthPulse_AI_Project_Report_INT428_Reference_Format.docx  MODEL_CARD.md  README.md  sample_custom_health_data.csv
backend/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py  models.py  settings.py
backend/app/data_sources/: owid.py  registry.py  who.py  world_bank.py
backend/app/services/: analytics.py  cache.py  nlp.py  query_model.py  reports.py
backend/tests/: test_chat_api.py  test_health_ai.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  styles.css  types.ts
